app2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  #namespace: helloworld2
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
