app2/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: helloworld-httproute
  namespace: helloworld2
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "www.helloworld2.com"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /actuator/prometheus
      backendRefs:
      - name: helloworld-service
        port: 8080
        namespace: helloworld2
